# renderscope

./: .firebaserc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  firebase.json  package-lock.json  package.json  storage.rules  tsconfig.base.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: benchmark_submission.yml  bug_report.yml  config.yml  feature_request.yml  new_renderer.yml
.github/workflows/: benchmark.yml  ci.yml  deploy.yml  lighthouse.yml  publish-npm.yml  update-data.yml
data/: glossary.json  taxonomy.json  techniques.json
data/benchmarks/: classroom-appleseed-hw1.json  classroom-blender-cycles-hw1.json  classroom-luxcorerender-hw1.json  classroom-mitsuba3-hw1.json  classroom-pbrt-hw1.json  cornell-box-appleseed-hw1.json  cornell-box-blender-cycles-hw1.json  cornell-box-luxcorerender-hw1.json  cornell-box-mitsuba3-hw1.json  cornell-box-mitsuba3-hw2.json  cornell-box-pbrt-hw1.json  cornell-box-pbrt-hw2.json  sponza-appleseed-hw1.json  sponza-blender-cycles-hw1.json  sponza-blender-cycles-hw2.json  sponza-luxcorerender-hw1.json  sponza-mitsuba3-hw1.json  sponza-pbrt-hw1.json
data/renderers/: 3d-gaussian-splatting.json  3d-slicer.json  3dgs-cpp.json  _template.json  appleseed.json  babylonjs.json  bevy.json  bgfx.json  blender-cycles.json  blender-eevee.json  deodr.json  drjit.json  embree.json  filament.json  gaussian-splatting-lightning.json  godot.json  gsplat.json  indigo-renderer.json  instant-ngp.json  lichtfeld-studio.json  luxcorerender.json  mitsuba3.json  nerfacc.json  nerfstudio.json  nvdiffrast.json  nvidia-falcor.json  nvidia-kaolin.json  ogre3d.json  open3d.json  ospray.json  panda3d.json  paraview.json  pbrt.json  povray.json  pytorch3d.json  radeon-prorender.json  raylib.json  raytracing-in-one-weekend.json  redner.json  smallpt.json  (+14 more)
data/scenes/: bmw.json  classroom.json  cornell-box.json  san-miguel.json  sponza.json  stanford-bunny.json  veach-mis.json
docs/: NAMING_CONVENTIONS.md
python/: README.md  pyproject.toml
python/src/renderscope/: __init__.py
python/src/renderscope/adapters/: __init__.py  appleseed.py  base.py  cycles.py  exceptions.py  filament.py  luxcore.py  mitsuba.py  mock.py  ospray.py  pbrt.py
python/src/renderscope/cli/: __init__.py  benchmark.py  compare.py  download.py  info.py  list_renderers.py  main.py  report.py  system_info.py
python/src/renderscope/core/: __init__.py  benchmark.py  data_loader.py  metrics.py  registry.py  runner.py  scene.py
python/src/renderscope/data/: __init__.py
python/src/renderscope/data/renderers/: __init__.py
python/src/renderscope/data/scenes/: __init__.py  manifest.json
python/src/renderscope/models/: __init__.py  benchmark.py  hardware.py  renderer.py  settings.py
python/src/renderscope/report/: __init__.py  _loader.py  csv_export.py  html_report.py  json_export.py  markdown_export.py
python/src/renderscope/report/templates/: report.html
python/src/renderscope/report/templates/components/: convergence_chart.html  footer.html  hardware.html  header.html  raw_data.html  scene_section.html  summary_table.html
python/src/renderscope/utils/: __init__.py  colormaps.py  console.py  hardware.py  image_io.py
python/tests/: conftest.py  generate_test_images.py  test_adapters.py  test_adapters_session16_2.py  test_cli.py  test_colormaps.py  test_compare_cli.py  test_exceptions.py  test_image_io.py  test_metrics.py  test_models.py  test_placeholder.py  test_registry.py  test_runner.py
python/tests/adapters/: test_adapter_detection.py  test_adapter_interface.py  test_adapter_registry.py  test_exceptions.py  test_mock_adapter.py
python/tests/cli/: test_benchmark_command.py  test_compare_command.py  test_help_and_version.py  test_info_command.py  test_list_command.py  test_report_command.py  test_system_info.py
python/tests/fixtures/: minimal_results.json  sample_results.json
python/tests/integration/: test_benchmark_pipeline.py  test_report_pipeline.py
python/tests/unit/: test_colormaps.py  test_data_loader.py  test_hardware.py  test_image_io.py  test_metrics.py  test_models.py  test_report_generation.py  test_runner.py  test_scene_manager.py
schemas/: benchmark.schema.json  renderer.schema.json  scene.schema.json  taxonomy.schema.json
scripts/: acquire_scenes.py  benchmark_config.yaml  benchmark_config_batch2.yaml  blender_export.py  check_ci.sh  convert_scenes.py  copy_renders_to_web.sh  cors.json  fetch_github_stats.py  format_compatibility.py  generate_reference_renders.py  generate_representative_renders.py  generate_web_images.py  populate_scene_renders.py  prepare_scenes.py  requirements-scripts.txt  run_benchmarks.py  setup_github_labels.sh  upload_assets.sh  validate_data.py  validate_integration.py  validate_scenes.py
web/: .gitattributes  .lighthouserc.json  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/scripts/: check-bundle-size.mjs  generate-og-images.tsx  optimize-images.mjs
web/src/__tests__/: setup.ts  test-utils.tsx
web/src/app/: globals.css  home-content.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/components/: feature-preview-card.tsx  json-ld.tsx  page-header.tsx
web/src/hooks/: use-benchmark-filters.ts  use-chart-highlight.ts  use-filter-counts.ts  use-focus-trap.ts  use-image-loader.ts  use-reduced-motion.ts  use-renderer-filters.ts  use-renderer-search.ts  use-resize-observer.ts  use-roving-tabindex.ts  use-slider-drag.ts  use-synced-zoom.ts
web/src/lib/: a11y-utils.ts  animations.ts  benchmark-data.test.ts  benchmark-data.ts  benchmark-rankings.test.ts  benchmark-rankings.ts  benchmark-url-state.ts  chart-utils.test.ts  chart-utils.ts  color-maps.test.ts  color-maps.ts  compare-images.ts  compare-url-state.ts  constants.ts  data.test.ts  data.ts  features.ts  filters.test.ts  filters.ts  format.test.ts  format.ts  image-manifest.ts  image-processing.test.ts  (+16 more)
(+217 files in other folders)
